# Cluster-Calculations

./: CMakeLists.txt
Lab1/Lab1/: Lab1.vcxproj
